# serializer version: 1
# name: test_config_flow_preview_success[missing_size_and_age]
  dict({
    'attributes': dict({
      'friendly_name': 'Statistical characteristic',
      'icon': 'mdi:calculator',
    }),
    'state': 'unavailable',
  })
# ---
# name: test_config_flow_preview_success[success]
  dict({
    'attributes': dict({
      'buffer_usage_ratio': 0.1,
      'friendly_name': 'Statistical characteristic',
      'icon': 'mdi:calculator',
      'source_value_valid': True,
      'state_class': 'measurement',
    }),
    'state': '16.0',
  })
# ---
# name: test_options_flow_preview
  dict({
    'attributes': dict({
      'age_coverage_ratio': 0.0,
      'buffer_usage_ratio': 0.05,
      'friendly_name': 'Statistical characteristic',
      'icon': 'mdi:calculator',
      'source_value_valid': True,
      'state_class': 'measurement',
    }),
    'state': '16.0',
  })
# ---
# name: test_options_flow_preview[updated]
  dict({
    'attributes': dict({
      'age_coverage_ratio': 0.0,
      'buffer_usage_ratio': 0.1,
      'friendly_name': 'Statistical characteristic',
      'icon': 'mdi:calculator',
      'source_value_valid': True,
      'state_class': 'measurement',
    }),
    'state': '20.0',
  })
# ---
